apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: filebrowser
